fix video alignment issue

--- a/public/styles/board.css
+++ b/public/styles/board.css
@@ -160,7 +160,7 @@ button:hover {
   z-index: 3;
 }
 
-#remote-videos {
+#remoteVideos {
   display: flex;
   flex-direction: column;
 }
